installed-tests: Prepend pkglibdir to library path

Typelibs don't include the full path to the shared library on every
platform, so we need to add pkglibdir to GIRespository's library search
path when running the tests installed.

https://bugzilla.gnome.org/show_bug.cgi?id=776938